thymeleaf added and .html extensions removed from user-details.html

--- a/src/main/resources/templates/user-details.html
+++ b/src/main/resources/templates/user-details.html
@@ -39,7 +39,7 @@
         <!-- Classy Menu -->
         <nav class="classy-navbar" id="essenceNav">
             <!-- Logo -->
-            <a th:href="@{index}" class="book_your_shelf_logo">
+            <a th:href="@{/}" class="book_your_shelf_logo">
 
                 <img th:src="@{/static/images/logo/book_your_shelf_logo.png}" alt="">
             </a>
@@ -60,36 +60,36 @@
                             <div class="megamenu">
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Categories</li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Literature</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Novel</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Children and Youth</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Literature</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Novel</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Children and Youth</a>
                                     </li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Science</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Comic Book</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Religion Sufism</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Course/Exam Books</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Philosophy</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Foreign Languages</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow" style="font-weight: bold">
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Science</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Comic Book</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Religion Sufism</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Course/Exam Books</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Philosophy</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Foreign Languages</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow" style="font-weight: bold">
                                         Book Cases
                                     </a></li>
                                 </ul>
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Campaigns</li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Literature Day</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Black Friday</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Home Reading Festival</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Literature Day</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Black Friday</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Home Reading Festival</a>
                                     </li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Up to 40% Discount at
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Up to 40% Discount at
                                         İşbank Cultural Publications & İşbank Science Publications</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">40% Discount on Bilgi
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">40% Discount on Bilgi
                                         Publishing House Classics</a></li>
                                 </ul>
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Hot Lists</li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Best Sellers</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">New Releases</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Our Picks For You</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Best Sellers</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">New Releases</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Our Picks For You</a></li>
                                 </ul>
                                 <div class="single-mega cn-col-4">
                                     <img th:src="@{/static/images/icons/01brownbookicon.jpg}" alt="">
@@ -100,29 +100,29 @@
                             <div class="megamenu">
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Categories</li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Fiction and Literature</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Fiction and Literature</a>
                                     </li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Health and Care</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Literature and Writing</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Health and Care</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Literature and Writing</a>
                                     </li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Life Style</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Sports and Recreation</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Life Style</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Sports and Recreation</a>
                                     </li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Science Fiction and
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Science Fiction and
                                         Fantasy</a></li>
                                 </ul>
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Campaigns</li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Black Friday</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Sports Day</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">%40 Discount on Science
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Black Friday</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Sports Day</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">%40 Discount on Science
                                         Fiction and Fantasy</a></li>
                                 </ul>
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Hot Lists</li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Best Sellers</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">New Releases</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Our Picks For You</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Best Sellers</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">New Releases</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Our Picks For You</a></li>
                                 </ul>
                                 <div class="single-mega cn-col-4">
                                     <img th:src="@{/static/images/icons/01brownebookicon.jpg}" alt="">
@@ -133,32 +133,32 @@
                             <div class="megamenu">
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Categories</li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Mystery and Suspicion</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Mystery and Suspicion</a>
                                     </li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Romance</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Literature</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Children and Youth</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Romance</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Literature</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Children and Youth</a>
                                     </li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Cartoons and Comics</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Cartoons and Comics</a>
                                     </li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Business and Finance</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Business and Finance</a>
                                     </li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Biography and Memory</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Biography and Memory</a>
                                     </li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Romantic</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Romantic</a></li>
                                 </ul>
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Campaigns</li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Black Friday</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Cartoons and Comics
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Black Friday</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Cartoons and Comics
                                         Day</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">%20 on Romantic</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">%20 on Romantic</a></li>
                                 </ul>
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Hot Lists</li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Best Sellers</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">New Releases</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Our Picks For You</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Best Sellers</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">New Releases</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Our Picks For You</a></li>
                                 </ul>
                                 <div class="single-mega cn-col-4">
                                     <img th:src="@{/static/images/icons/01brownaudiobookicon.jpg}" alt="">
@@ -169,22 +169,22 @@
                             <div class="megamenu">
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Categories</li>
-                                    <li><a th:href="@{category}">Kobo</a></li>
-                                    <li><a th:href="@{category}">Calibro</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow" style="font-weight: bold">
+                                    <li><a th:href="@{/category}">Kobo</a></li>
+                                    <li><a th:href="@{/category}">Calibro</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow" style="font-weight: bold">
                                         E-Book Reader Cases
                                     </a></li>
                                 </ul>
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Campaigns</li>
-                                    <li><a th:href="@{category}">Black Friday</a></li>
-                                    <li><a th:href="@{category}">E-Book Reader Day</a></li>
+                                    <li><a th:href="@{/category}">Black Friday</a></li>
+                                    <li><a th:href="@{/category}">E-Book Reader Day</a></li>
                                 </ul>
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Hot Lists</li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Best Sellers</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">New Releases</a></li>
-                                    <li><a th:href="@{category}" class="nav-bar-text-overflow">Our Picks For You</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Best Sellers</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">New Releases</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Our Picks For You</a></li>
                                 </ul>
                                 <div class="single-mega cn-col-4">
                                     <img th:src="@{/static/images/icons/01brownebookicon.jpg}" alt="">
@@ -227,12 +227,12 @@
 
             <!-- Favourite Area -->
             <div class="favourite-area">
-                <a th:href="@{wish-list}"><img th:src="@{/static/images/core-img/heart.svg}" alt=""></a>
+                <a th:href="@{/wish-list}"><img th:src="@{/static/images/core-img/heart.svg}" alt=""></a>
             </div>
 
             <!-- Cart Area -->
             <div class="cart-area">
-                <a th:href="@{cart}" id="essenceCartBtn"><img th:src="@{/static/images/core-img/bag.svg}" alt="">
+                <a th:href="@{/cart}" id="essenceCartBtn"><img th:src="@{/static/images/core-img/bag.svg}" alt="">
                     <span>3</span></a>
             </div>
         </div>
@@ -251,8 +251,8 @@
                     <div class="products_bar d-flex flex-lg-row flex-column align-items-lg-center align-items-start justify-content-lg-start justify-content-center">
                         <div class="breadcrumbs d-flex flex-column align-items-center justify-content-center">
                             <ul class="d-flex flex-row align-items-start justify-content-start text-center">
-                                <li><a th:href="@{index}">Home</a></li>
-                                <li><a th:href="@{admin-panel}">Panel</a></li>
+                                <li><a th:href="@{/}">Home</a></li>
+                                <li><a th:href="@{/admin-panel}">Panel</a></li>
                                 <!-- TODO Name -->
                                 <li style="color: #fbaa1d" th:text="${user.name  +  user.surname}"></li>
                                 <a th:href="@{'/user-details#information'}"></a>
@@ -361,7 +361,7 @@
                         <div class="col-lg-4 footer_col">
                             <ul class="footer_list">
                                 <li>
-                                    <a th:href="@{membership}" target="_blank">
+                                    <a th:href="@{/membership}" target="_blank">
                                         <div>Terms and Conditions</div>
                                     </a>
                                 </li>
