--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" type="text/css" th:href="@{/static/plugins/font-awesome-4.7.0/css/font-awesome.min.css}">
     <!-- Favicon  -->
 
-
     <link rel="icon" th:href="@{/static/images/logo/book_your_shelf_tab.png}">
     <link rel="stylesheet" type="text/css" th:href="@{/static/plugins/OwlCarousel2-2.2.1/owl.carousel.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/static/plugins/OwlCarousel2-2.2.1/owl.theme.default.css}">
@@ -30,7 +29,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/static/styles/profile.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/static/styles/iziToast.min.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/static/styles/user-details.css}">
-
+    <link rel="stylesheet" type="text/css" th:href="@{/styles/admin-panel-product.css}">
 
 </head>
 
@@ -68,10 +67,13 @@
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Science</a></li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Comic Book</a></li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Religion Sufism</a></li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Course/Exam Books</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Course/Exam Books</a>
+                                    </li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Philosophy</a></li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Foreign Languages</a></li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow" style="font-weight: bold">
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Foreign Languages</a>
+                                    </li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow"
+                                           style="font-weight: bold">
                                         Book Cases
                                     </a></li>
                                 </ul>
@@ -79,7 +81,8 @@
                                     <li class="title">Campaigns</li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Literature Day</a></li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Black Friday</a></li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Home Reading Festival</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Home Reading
+                                        Festival</a>
                                     </li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Up to 40% Discount at
                                         İşbank Cultural Publications & İşbank Science Publications</a></li>
@@ -90,7 +93,8 @@
                                     <li class="title">Hot Lists</li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Best Sellers</a></li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">New Releases</a></li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Our Picks For You</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Our Picks For You</a>
+                                    </li>
                                 </ul>
                                 <div class="single-mega cn-col-4">
                                     <img th:src="@{/static/images/icons/01brownbookicon.jpg}" alt="">
@@ -101,13 +105,16 @@
                             <div class="megamenu">
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Categories</li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Fiction and Literature</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Fiction and
+                                        Literature</a>
                                     </li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Health and Care</a></li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Literature and Writing</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Literature and
+                                        Writing</a>
                                     </li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Life Style</a></li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Sports and Recreation</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Sports and
+                                        Recreation</a>
                                     </li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Science Fiction and
                                         Fantasy</a></li>
@@ -123,7 +130,8 @@
                                     <li class="title">Hot Lists</li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Best Sellers</a></li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">New Releases</a></li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Our Picks For You</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Our Picks For You</a>
+                                    </li>
                                 </ul>
                                 <div class="single-mega cn-col-4">
                                     <img th:src="@{/static/images/icons/01brownebookicon.jpg}" alt="">
@@ -134,7 +142,8 @@
                             <div class="megamenu">
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Categories</li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Mystery and Suspicion</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Mystery and
+                                        Suspicion</a>
                                     </li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Romance</a></li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Literature</a></li>
@@ -159,7 +168,8 @@
                                     <li class="title">Hot Lists</li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Best Sellers</a></li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">New Releases</a></li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Our Picks For You</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Our Picks For You</a>
+                                    </li>
                                 </ul>
                                 <div class="single-mega cn-col-4">
                                     <img th:src="@{/static/images/icons/01brownaudiobookicon.jpg}" alt="">
@@ -172,7 +182,8 @@
                                     <li class="title">Categories</li>
                                     <li><a th:href="@{/category}">Kobo</a></li>
                                     <li><a th:href="@{/category}">Calibro</a></li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow" style="font-weight: bold">
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow"
+                                           style="font-weight: bold">
                                         E-Book Reader Cases
                                     </a></li>
                                 </ul>
@@ -185,7 +196,8 @@
                                     <li class="title">Hot Lists</li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Best Sellers</a></li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">New Releases</a></li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Our Picks For You</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Our Picks For You</a>
+                                    </li>
                                 </ul>
                                 <div class="single-mega cn-col-4">
                                     <img th:src="@{/static/images/icons/01brownebookicon.jpg}" alt="">
@@ -287,7 +299,8 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link profile-navbar-text" data-url="/admin-panel/order" th:href="@{#order}">Orders</a>
+                        <a class="nav-link profile-navbar-text" data-url="/admin-panel/order"
+                           th:href="@{#order}">Orders</a>
                     </li>
 
                     <li class="nav-item">
@@ -351,7 +364,8 @@
                             <div class="footer_about">
                                 <div class="footer_logo">
                                     <div class="d-flex flex-row align-items-center justify-content-center">
-                                        <img class="book_your_shelf_footer" th:src="@{/static/images/logo/book_your_shelf_logo.png}"
+                                        <img class="book_your_shelf_footer"
+                                             th:src="@{/static/images/logo/book_your_shelf_logo.png}"
                                              alt="">
                                     </div>
                                 </div>
@@ -428,7 +442,6 @@
 <script th:src="@{/static/js/bootstrap-multiselect.js}"></script>
 <script th:src="@{/static/js/select.js}"></script>
 <script th:src="@{/static/js/iziToast.min.js}"></script>
-
 
 
 <script>
