Fix second form submit bug on admin panel category page

--- a/src/main/resources/templates/admin_panel/_category.html
+++ b/src/main/resources/templates/admin_panel/_category.html
@@ -239,6 +239,9 @@
                 color: 'green'
             });
             window.location.href = "/admin-panel#category";
+            setTimeout(function () {
+                history.pushState(null, null, ' ');
+            }, 100);
         }).fail(function (data) {
             iziToast.show({
                 title: 'Fail',
