Remove bad String to enum converter and use val() on admin panel categories

--- a/src/main/resources/templates/admin_panel/_category.html
+++ b/src/main/resources/templates/admin_panel/_category.html
@@ -225,7 +225,7 @@
     $('#add_category_button').click(function (event) {
         event.preventDefault();
         var name = $('#new_category_name').val();
-        var productType = $('#category_product_type option:selected').text().toUpperCase().split("-").join("_").split(" ").join("_");
+        var productType = $('#category_product_type option:selected').val();
         var ret = {
             name: name,
             productType: productType
