th fields added to product details

--- a/src/main/resources/templates/admin_panel/_product.html
+++ b/src/main/resources/templates/admin_panel/_product.html
@@ -1798,6 +1798,6 @@
         return images;
     }
 </script>
-<script src="js/admin-panel.js"></script>
-<script src="js/input-mask.js"></script>
+<script th:src="@{/static/js/admin-panel.js}"></script>
+<script th:src="@{/static/js/input-mask.js}"></script>
 </html>
