--- a/src/main/resources/templates/product_details/_images.html
+++ b/src/main/resources/templates/product_details/_images.html
@@ -1,4 +1,4 @@
-<!-- Cover Photo -->
+<!-- Cover Image -->
 <div class="address-element-padding">
     <div class="billingAddress">
         <div class="product_content">
@@ -6,7 +6,7 @@
                 <div class="col-md-1"></div>
                 <div class="col-md-10">
                     <div class="tab-title-text">
-                        Cover Photo
+                        Cover Image
                     </div>
                 </div>
                 <div class="col-md-1"></div>
@@ -38,19 +38,19 @@
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-10">
-                <label for="cover-photo" class="login_button trans_200">
-                    <a class="choose_file_button">Upload Cover Photo</a>
+                <label for="cover-image" class="login_button trans_200">
+                    <a class="choose_file_button">Upload Cover Image</a>
                 </label>
-                <input id="cover-photo" onchange="updatePhoto(this.id);"
+                <input id="cover-image" onchange="updateImage(this.id);"
                        style="visibility:hidden;" type="file">
                 <p>Selected file:</p>
-                <div id="cover-photo-list"></div>
+                <div id="cover-image-list"></div>
             </div>
             <div class="col-md-1"></div>
         </div>
     </div>
 </div>
-<!-- Product Photos -->
+<!-- Product Images -->
 <div class="address-element-padding">
     <div class="billingAddress">
         <div class="product_content">
@@ -58,7 +58,7 @@
                 <div class="col-md-1"></div>
                 <div class="col-md-10">
                     <div class="tab-title-text">
-                        Product Photos
+                        Product Images
                     </div>
                 </div>
                 <div class="col-md-1"></div>
@@ -109,14 +109,14 @@
             <div class="row">
                 <div class="col-md-1"></div>
                 <div class="col-md-10">
-                    <label for="product-photos" class="login_button trans_200">
-                        <a class="choose_file_button">Upload Product Photos</a>
+                    <label for="product-images" class="login_button trans_200">
+                        <a class="choose_file_button">Upload Product Images</a>
                     </label>
-                    <input multiple id="product-photos"
-                           onchange="updatePhoto(this.id);"
+                    <input multiple id="product-images"
+                           onchange="updateImage(this.id);"
                            style="visibility:hidden;" type="file">
                     <p>Selected files:</p>
-                    <div id="product-photos-list"></div>
+                    <div id="product-images-list"></div>
                 </div>
                 <div class="col-md-1"></div>
             </div>
