--- a/src/main/resources/templates/user_details/_information.html
+++ b/src/main/resources/templates/user_details/_information.html
@@ -85,16 +85,16 @@
                     </div>
                 </div>
                 <div class="col-lg-10">
-                    <div th:if="${user.getBirthDate() != ''}">
+                    <div th:if="${user.getBirthDate() != null}">
                         <div class="tab-content-text date">
                             <h th:text="${user.birthDate}"></h>
                         </div>
                     </div>
 
-                    <div th:unless="${user.birthDate == ''}">
-                        <div class="tab-content-text date">
-                            <h>-</h>
-                        </div>
+                    <div th:unless="${user.birthDate != null }">
+
+                        <h>-</h>
+
                     </div>
 
                 </div>
@@ -108,14 +108,22 @@
                     </div>
                 </div>
                 <div class="col-lg-10">
-                    <div class="tab-content-text phone_mask">
-                        <div th:if="${user.phoneNumber != ''}">
-                            <h th:text="${user.phoneNumber}"></h>
-                        </div>
-                        <div th:unless="${user.phoneNumber == 'null'}">
+                    <div th:unless="${user.phoneNumber != null}">
+                        <div>-</div>
+                    </div>
+
+                    <div th:if="${user.phoneNumber != null}">
+                        <div th:unless="${user.phoneNumber.length() > 3}">
                             <div>-</div>
                         </div>
+                        <div th:if="${user.phoneNumber.length() > 3}">
+                            <div class="tab-content-text phone_mask">
+                                <h th:text="${user.phoneNumber}"></h>
+                            </div>
+                        </div>
                     </div>
+
+
                 </div>
             </div>
         </div>
@@ -150,9 +158,10 @@
                                 Surname
                             </div>
 
-                            <input type="text" th:field="*{surname}" th:value="${user.getSurname()}"
+                            <input type="text" class="login_input form-control" th:field="*{surname}"
+                                   th:value="${user.getSurname()}" style="color: black;"
                                    id="user-info-update_surname"
-                                   class="login_input form-control" pattern="^[a-zA-Z ]+$"
+                                   pattern="^[a-zA-Z ]+$"
                                    placeholder="Surname"
                                    required="required">
                         </div>
@@ -178,7 +187,6 @@
                             <input type="password" th:field="*{password}" id="login_password"
                                    class="login_input form-control pwd"
                                    pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-]).{8,16}$"
-                                   required="required"
                                    placeholder="Password">
                             <div class="input-group-append">
                                                         <span class="input-group-text show_password_bg">
@@ -197,11 +205,11 @@
                             <div class="login-text p-b-10" style="color: black;">
                                 Birth Date
                             </div>
-                            <input type="text" th:field="*{birthDate}" th:value="${user.getBirthDate()}"
-                                   id="user-info-update_birth_date"
+                            <input type="text" th:field="*{birthDate}"
+                                   id="user-info-update_birth_date" style="color: black;"
                                    class="login_input form-control date"
-                                   placeholder="dd.mm.yyyy"
-                                   pattern="^(0?[1-9]|1[0-2])/([0-2]?[1-9]|[1-3][01])/\d{4}$" required="required">
+                                   placeholder="dd/mm/yyyy"
+                                   pattern=".{10}">
                         </div>
                         <div class="col-lg-6">
                             <!-- Phone no -->
@@ -211,17 +219,12 @@
                             <input type="text" th:field="*{phoneNumber}" th:value="${user.getPhoneNumber()}"
                                    id="user-info-update_phone"
                                    class="login_input form-control phone_mask"
-                                   placeholder="(XXX) XXX XX XX"
-                                   required="required">
+                                   placeholder="(XXX) XXX XX XX" pattern=".{15}">
                         </div>
                     </div>
 
                     <div><!--ERROR--></div>
-                    <div style="color: red;" th:if="${#fields.hasErrors('*')}">
-                        <ul>
-                            <li th:each="err : ${#fields.errors('*')}" th:text="${err}"></li>
-                        </ul>
-                    </div>
+
 
                     <!-- Button -->
 
@@ -235,14 +238,15 @@
 <script th:inline="javascript">
     /*<![CDATA[*/
     $('#updateUser,#deleteUser').click(function (event) {
-        event.preventDefault();
         var button = $(this).attr("id");
         var name = $('#user-info-update_name').val();
         var surname = $('#user-info-update_surname').val();
         var email = $('#login_email').val();
         var phoneNumber = $('#user-info-update_phone').val();
+        var birthDate = $('#user-info-update_birth_date').val();
         var userId = /*[[${user.getUserId()}]]*/ 'default';
         var user = /*[[${user}]]*/ 'default';
+        var password = $('#login_password').val();
 
 
         var ret = {
@@ -253,31 +257,43 @@
             email: email,
             phoneNumber: phoneNumber,
             userId: userId,
-            user: user
+            user: user,
+            birthDate: birthDate,
+            password: password
 
         };
 
-
+        <!-- Burada eger date ve phone bos degilse validation_check ile kontrol et -->
         if (button === "updateUser") {
-            $.post("/user-details/information/" + userId, ret, function (data) {
-                iziToast.show({
-                    title: 'Success',
-                    message: 'User updated successfully',
-                    position: 'topRight',
-                    color: 'green'
-                });
-                window.location.href = "/user-details/" + userId + "#information";
+            if ((((birthDate !== "") && (validation_check(['user-info-update_birth_date']))) || birthDate === "") &&
+                (((password !== "") && (validation_check(['login_password']))) || password === "")&&
+                (((phoneNumber !== "") && (validation_check(['user-info-update_phone']))) || phoneNumber === "") &&
+                (validation_check(['user-info-update_name', 'user-info-update_surname', 'login_email']))) {
+                event.preventDefault();
+                $.post("/user-details/information/" + userId, ret, function (data) {
+                    iziToast.show({
+                        title: 'Success',
+                        message: 'User updated successfully',
+                        position: 'topRight',
+                        color: 'green'
+                    });
+                    window.location.href = "/user-details/" + userId + "#information";
+                    setTimeout(function () {
+                        history.pushState(null, null, ' ');
+                    }, 100);
 
-            }).fail(function (data) {
-                iziToast.show({
-                    title: 'Fail',
-                    message: data.responseText,
-                    position: 'topRight',
-                    color: 'red'
-                });
-            })
+                }).fail(function (data) {
+                    iziToast.show({
+                        title: 'Fail',
+                        message: data.responseText,
+                        position: 'topRight',
+                        color: 'red'
+                    });
+                })
+            }
         } else if (button === "deleteUser") {
-            $.post("/user-details/information", ret, function (data) {
+            event.preventDefault();
+            $.post("/user-details/information/" + userId, ret, function (data) {
                 iziToast.show({
                     title: 'Success',
                     message: 'User deleted successfully',
@@ -285,6 +301,9 @@
                     color: 'green'
                 });
                 window.location.href = "/admin-panel#user";
+                setTimeout(function () {
+                    history.pushState(null, null, ' ');
+                }, 100);
 
             }).fail(function (data) {
                 iziToast.show({
@@ -310,4 +329,5 @@
 
     /*]]>*/
 </script>
+<script th:src="@{/static/js/input-mask.js}"></script>
 </html>
