--- a/src/main/resources/templates/user-details.html
+++ b/src/main/resources/templates/user-details.html
@@ -279,7 +279,8 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link profile-navbar-text" data-url="/user-details/address" th:href="@{#address}">Addresses</a>
+                        <a class="nav-link profile-navbar-text" th:data-url="'/user-details/address/' + ${user.getUserId()}"
+                           th:href="@{#address}">Addresses</a>
                     </li>
 
                     <li class="nav-item">
@@ -436,6 +437,8 @@
     $('#information').load($('.nav-link.active').attr("data-url"), function (result) {
     });
 </script>
+
+
 </body>
 </html>
 </html>
