Add remember me functionality to login page with 1 day period

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -272,6 +272,7 @@
                                                     <label>
                                                         <label class="checkbox_container">
                                                             <input type="checkbox" id="remember"
+                                                                   name="remember-me"
                                                                    class="billing_checkbox" >
                                                             <span class="checkbox_mark"></span>
                                                         </label>
