--- a/src/main/resources/templates/admin_panel/_product.html
+++ b/src/main/resources/templates/admin_panel/_product.html
@@ -1494,8 +1494,6 @@
             }),
         };
 
-        console.log(ret);
-
         if (validation_check(["book_product_name_input", "book_barcode_input", "book_stock_input", "book_price_input",
             "book_published_year_input", "book_language_input", "book_translator_input", "book_authors_input", "book_isbn_input",
             "book_publisher_input", "book_keywords_input", "book_short_description_input", "book_long_description_input",
@@ -1510,6 +1508,10 @@
                     color: 'green'
                 });
                 window.location.href = "/admin-panel#product";
+                setTimeout(function () {
+                    history.pushState(null, null, ' ');
+                }, 100);
+
             }).fail(function (data) {
                 iziToast.show({
                     title: 'Fail',
@@ -1561,6 +1563,10 @@
                     color: 'green'
                 });
                 window.location.href = "/admin-panel#product";
+                setTimeout(function () {
+                    history.pushState(null, null, ' ');
+                }, 100);
+
             }).fail(function (data) {
                 iziToast.show({
                     title: 'Fail',
@@ -1598,8 +1604,6 @@
             }),
         };
 
-        console.log(ret);
-
         if (validation_check(["audiobook_product_name_input", "audiobook_barcode_input", "audiobook_stock_input", "audiobook_price_input",
             "audiobook_published_year_input", "audiobook_language_input", "audiobook_language_input", "audiobook_translator_input",
             "audiobook_authors_input", "audiobook_isbn_input", "audiobook_publisher_input", "audiobook_keywords_input",
@@ -1614,6 +1618,10 @@
                     color: 'green'
                 });
                 window.location.href = "/admin-panel#product";
+                setTimeout(function () {
+                    history.pushState(null, null, ' ');
+                }, 100);
+
             }).fail(function (data) {
                 iziToast.show({
                     title: 'Fail',
@@ -1655,7 +1663,8 @@
             cellular: $('#ebook_reader_cellular_select').val(),
             backLight: $('#ebook_reader_backlight_select').val(),
             warmBackLight: $('#ebook_reader_warm_backlight_select').val(),
-            images: image_arr('ebook_reader_cover_image', 'ebook_reader_product_images')
+            images: image_arr('ebook_reader_cover_image', 'ebook_reader_product_images'),
+            lists: JSON.stringify({})
         };
 
         if (validation_check(["ebook_reader_product_name_input", "ebook_reader_barcode_input", "ebook_reader_stock_input",
@@ -1675,6 +1684,10 @@
                     color: 'green'
                 });
                 window.location.href = "/admin-panel#product";
+                setTimeout(function () {
+                    history.pushState(null, null, ' ');
+                }, 100);
+
             }).fail(function (data) {
                 iziToast.show({
                     title: 'Fail',
@@ -1704,7 +1717,8 @@
             caseHeight: $('#ebook_reader_case_height_input').val(),
             caseWidth: $('#ebook_reader_case_width_input').val(),
             caseDepth: $('#ebook_reader_case_depth_input').val(),
-            images: image_arr('ebook_reader_case_cover_image', 'ebook_reader_case_product_images')
+            images: image_arr('ebook_reader_case_cover_image', 'ebook_reader_case_product_images'),
+            lists: JSON.stringify({})
         };
 
         if (validation_check(["ebook_reader_case_product_name_input", "ebook_reader_case_barcode_input", "ebook_reader_case_stock_input",
@@ -1721,6 +1735,10 @@
                     color: 'green'
                 });
                 window.location.href = "/admin-panel#product";
+                setTimeout(function () {
+                    history.pushState(null, null, ' ');
+                }, 100);
+
             }).fail(function (data) {
                 iziToast.show({
                     title: 'Fail',
@@ -1748,10 +1766,9 @@
             maxBookDepth: $('#book_case_max_depth_input').val(),
             shortDesc: $('#book_case_short_description_input').val(),
             longDesc: $('#book_case_long_description_input').val(),
-            images: image_arr('book_case_cover_image', 'book_case_product_images') // TODO
+            images: image_arr('book_case_cover_image', 'book_case_product_images'), // TODO
+            lists: JSON.stringify({})
         };
-
-        console.log(ret.images);
 
         if (validation_check(["book_case_product_name_input", "book_case_barcode_input", "book_case_stock_input",
             "book_case_price_input", "book_case_brand_input", "book_case_model_input", "book_case_color_input",
@@ -1766,6 +1783,10 @@
                     color: 'green'
                 });
                 window.location.href = "/admin-panel#product";
+                setTimeout(function () {
+                    history.pushState(null, null, ' ');
+                }, 100);
+                
             }).fail(function (data) {
                 iziToast.show({
                     title: 'Fail',
