--- a/src/main/resources/templates/product-details.html
+++ b/src/main/resources/templates/product-details.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/static/styles/login.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/static/styles/profile.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/static/styles/admin-panel.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/styles/iziToast.min.css}">
 
 </head>
 
@@ -63,10 +64,13 @@
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Science</a></li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Comic Book</a></li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Religion Sufism</a></li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Course/Exam Books</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Course/Exam Books</a>
+                                    </li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Philosophy</a></li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Foreign Languages</a></li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow" style="font-weight: bold">
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Foreign Languages</a>
+                                    </li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow"
+                                           style="font-weight: bold">
                                         Book Cases
                                     </a></li>
                                 </ul>
@@ -74,7 +78,8 @@
                                     <li class="title">Campaigns</li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Literature Day</a></li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Black Friday</a></li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Home Reading Festival</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Home Reading
+                                        Festival</a>
                                     </li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Up to 40% Discount at
                                         İşbank Cultural Publications & İşbank Science Publications</a></li>
@@ -85,7 +90,8 @@
                                     <li class="title">Hot Lists</li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Best Sellers</a></li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">New Releases</a></li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Our Picks For You</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Our Picks For You</a>
+                                    </li>
                                 </ul>
                                 <div class="single-mega cn-col-4">
                                     <img th:src="@{/static/images/icons/01brownbookicon.jpg}" alt="">
@@ -96,13 +102,16 @@
                             <div class="megamenu">
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Categories</li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Fiction and Literature</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Fiction and
+                                        Literature</a>
                                     </li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Health and Care</a></li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Literature and Writing</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Literature and
+                                        Writing</a>
                                     </li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Life Style</a></li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Sports and Recreation</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Sports and
+                                        Recreation</a>
                                     </li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Science Fiction and
                                         Fantasy</a></li>
@@ -118,7 +127,8 @@
                                     <li class="title">Hot Lists</li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Best Sellers</a></li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">New Releases</a></li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Our Picks For You</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Our Picks For You</a>
+                                    </li>
                                 </ul>
                                 <div class="single-mega cn-col-4">
                                     <img th:src="@{/static/images/icons/01brownebookicon.jpg}" alt="">
@@ -129,7 +139,8 @@
                             <div class="megamenu">
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Categories</li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Mystery and Suspicion</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Mystery and
+                                        Suspicion</a>
                                     </li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Romance</a></li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Literature</a></li>
@@ -154,7 +165,8 @@
                                     <li class="title">Hot Lists</li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Best Sellers</a></li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">New Releases</a></li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Our Picks For You</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Our Picks For You</a>
+                                    </li>
                                 </ul>
                                 <div class="single-mega cn-col-4">
                                     <img th:src="@{/static/images/icons/01brownaudiobookicon.jpg}" alt="">
@@ -167,7 +179,8 @@
                                     <li class="title">Categories</li>
                                     <li><a th:href="@{/category}">Kobo</a></li>
                                     <li><a th:href="@{/category}">Calibro</a></li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow" style="font-weight: bold">
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow"
+                                           style="font-weight: bold">
                                         E-Book Reader Cases
                                     </a></li>
                                 </ul>
@@ -180,7 +193,8 @@
                                     <li class="title">Hot Lists</li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">Best Sellers</a></li>
                                     <li><a th:href="@{/category}" class="nav-bar-text-overflow">New Releases</a></li>
-                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Our Picks For You</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Our Picks For You</a>
+                                    </li>
                                 </ul>
                                 <div class="single-mega cn-col-4">
                                     <img th:src="@{/static/images/icons/01brownebookicon.jpg}" alt="">
@@ -249,8 +263,7 @@
                             <ul class="d-flex flex-row align-items-start justify-content-start text-center">
                                 <li><a th:href="@{/}">Home</a></li>
                                 <li><a th:href="@{/admin-panel}">Panel</a></li>
-                                <!-- TODO Name -->
-                                <li style="color: #fbaa1d">Animal Farm</li>
+                                <li style="color: #fbaa1d" th:text="${product.getProductName()}"></li>
                             </ul>
                         </div>
                     </div>
@@ -262,7 +275,8 @@
             <div class="container">
                 <ul class="nav nav-tabs justify-content-center" id="siteTab" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active profile-navbar-text" data-url="/product-details/information"
+                        <a class="nav-link active profile-navbar-text"
+                           th:data-url="'/product-details/information/' + ${product.productId}"
                            th:href="@{#information}">Information</a>
                     </li>
 
@@ -296,7 +310,8 @@
                             <div class="footer_about">
                                 <div class="footer_logo">
                                     <div class="d-flex flex-row align-items-center justify-content-center">
-                                        <img class="book_your_shelf_footer" th:src="@{/static/images/logo/book_your_shelf_logo.png}"
+                                        <img class="book_your_shelf_footer"
+                                             th:src="@{/static/images/logo/book_your_shelf_logo.png}"
                                              alt="">
                                     </div>
                                 </div>
@@ -350,7 +365,7 @@
 
 <script th:src="@{/static/js/jquery-3.2.1.min.js}"></script>
 <script th:src="@{/static/styles/bootstrap-4.1.2/popper.js}"></script>
-<script th:src="@{/static/bootstrap-4.1.2/bootstrap.min.js}"></script>
+<script th:src="@{/static/styles/bootstrap-4.1.2/bootstrap.min.js}"></script>
 <script th:src="@{/static/js/plugins.js}"></script>
 <script th:src="@{/static/plugins/greensock/TweenMax.min.js}"></script>
 <script th:src="@{/static/plugins/greensock/TimelineMax.min.js}"></script>
@@ -369,6 +384,9 @@
 <script th:src="@{/static/js/admin-panel.js}"></script>
 <script th:src="@{/static/js/confirm.js}"></script>
 <script th:src="@{/static/js/select.js}"></script>
+<script th:src="@{/static/js/input-mask.js}"></script>
+<script th:src="@{/static/js/jquery.mask.js}"></script>
+<script th:src="@{/static/js/iziToast.min.js}"></script>
 <script>
     $('#information').load($('.nav-link.active').attr("data-url"), function (result) {
     });
