checkbox fixed in profile informations

--- a/src/main/resources/templates/profile/_information.html
+++ b/src/main/resources/templates/profile/_information.html
@@ -78,7 +78,8 @@
                                                         <input type="checkbox"
                                                                id="permission_agreement"
                                                                name="permission_agreement"
-                                                               class="billing_checkbox" value="receiveMessage">
+                                                               class="billing_checkbox" value="receiveMessage"
+                                                        th:checked="${user.getReceiveMeesage()}">
                                                         <span class="checkbox_mark"></span>
                                                     </label>
                                                     <label style="padding-left: 29px; cursor: text">
