--- a/src/main/resources/templates/user-details.html
+++ b/src/main/resources/templates/user-details.html
@@ -260,7 +260,7 @@
                                 <li><a th:href="@{/}">Home</a></li>
                                 <li><a th:href="@{/admin-panel}">Panel</a></li>
                                 <!-- TODO Name -->
-                                <li style="color: #fbaa1d" th:text="${user.name + ' ' + user.surname}"  ></li>
+                                <li style="color: #fbaa1d" th:text="${user.getName() + ' ' + user.getSurname()}"  ></li>
                                 <a th:href="@{'/user-details#information'}"></a>
                             </ul>
                         </div>
